# SimEx

./: .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Changelog.rst  README  README.md  conda-requirements.txt  conda-requirements.yml  copyright_notice.py  deploy_doc_to_gh-pages.sh  deploy_rsa.enc  detector.py  doc  environment.yml  genindex.html  get_testdata.sh  index.html  install.devmode.sh  install.exfl.sh  install.max.sh  install.maxwell.sh  install.sh  objects.inv  patch_for_maxwell  py-modindex.html  requirements.txt  review4b9cbff.patch.txt  search.html  searchindex.js  setupenv.sh  simex.in  simex_dev.in  simex_vars.sh.in  simex_vars_dev.sh.in
CMake/: FindFFTW.cmake  (+6 more)
Modules/Analyzers/S2EReconstruction_DM/: CMakeLists.txt  makefile_DM
Modules/Analyzers/S2EReconstruction_EMC/: CMakeLists.txt
Modules/Detectors/XCSITPhotonDetector/: CMakeLists.txt
Modules/Diffractors/CrystFELPhotonDiffractor/: CMakeLists.txt
Modules/Diffractors/GAPDPhotonDiffractor/: CMakeLists.txt
Modules/Diffractors/SingFELPhotonDiffractor/: CMakeLists.txt
Modules/Diffractors/SingFElPhotonDiffractor/: CMakeLists.txt
Modules/Diffractors/SingFElPhotonDiffractor/patches/: CMakeLists.txt.patch  radiationDamageMPI.cpp.patch
Modules/Others/s2e/: CMakeLists.txt  pmi_demo.py.patch  prepHDF5.py.patch
Modules/PhotonInteractors/FEFFPhotonInteractor/: CMakeLists.txt
Modules/Propagators/WavePropagator/wpg/: CMakeLists.txt  Makefile.patch  genesis.py.patch  glossary.py.patch
Modules/Propagators/XFELPhotonPropagator/prop/: CMakeLists.txt  diagnostics.py.patch  propagateSE.py.patch
Modules/Propagators/XFELPhotonPropagator/wpg/: CMakeLists.txt  Makefile.patch  glossary.py.patch
Modules/Sources/GenesisPhotonSource/: CMakeLists.txt
Sources/: CMakeLists.txt  paths.origin.py
Sources/doc/: CMakeLists.txt  Makefile  requirements.txt
Sources/doc/source/: conf.py  index.rst
Sources/doc/source/Tutorial/: propagation_example_01.ipynb
Sources/doc/source/Tutorial/s2e_example/: s2e_example.tut.rst
Sources/doc/source/Tutorial/xrts/: xrts.py
Sources/doc/source/include/: SimEx.Analysis.rst  SimEx.Calculators.rst  SimEx.Parameters.rst  acknowledgements.rst  apiman.rst  contribute.rst  data_formats.rst  environment.rst  examples.rst  installation.rst  introduction.rst  license.rst  refman.rst  support.rst  testing.rst  usage.rst
Sources/python/: .header.py  setup.py
Sources/python/ScriptCollection/Converters/: pic2dist.py
Sources/python/ScriptCollection/DataAnalysis/: emc_diagnostics.py  emc_varcoeff.py  pattern_statistics.py  pmi_diagnostics.py
Sources/python/ScriptCollection/SimExScripts/: RadHydroXRTS.py  simex_script.py
Sources/python/SimEx/: AbstractBaseClass.py  __init__.py
Sources/python/SimEx/Analysis/: AbstractAnalysis.py  DiffractionAnalysis.py  XFELPhotonAnalysis.py  XMDYNPhotonMatterAnalysis.py  __init__.py
Sources/python/SimEx/CLI/: simex.py
Sources/python/SimEx/Calculators/: AbstractBaseCalculator.py  AbstractIonInteractor.py  AbstractPhotonAnalyzer.py  AbstractPhotonDetector.py  AbstractPhotonDiffractor.py  AbstractPhotonInteractor.py  AbstractPhotonPropagator.py  AbstractPhotonSource.py  ComptonScatteringCalculator.py  CrystFELPhotonDiffractor.py  CrystFELPhotonDiffractorParameters.py  DMPhasing.py  EMCCaseGenerator.py  EMCOrientation.py  EstherExperimentConstruction.py  EstherPhotonMatterInteractor.py  FEFFPhotonMatterInteractor.py  FakePhotonMatterInteractor.py  GAPDPhotonDiffractor.py  GaussianPhotonSource.py  GenesisPhotonSource.py  GromacsPhotonMatterInteractor.py  IdealPhotonDetector.py  OrientAndPhasePhotonAnalyzer.py  PerfectPhotonDetector.py  PlasmaXRTSCalculator.py  S2EReconstruction.py  SingFELPhotonDiffractor.py  TNSAIonMatterInteractor.py  WavePropagator.py  XCSITPhotonDetector.py  XCSITPhotonDetectorParameters.py  XFELPhotonPropagator.py  XFELPhotonSource.py  XMDYNDemoPhotonMatterInteractor.py  XMDYNPhotonMatterInteractor.py  __init__.py
Sources/python/SimEx/Parameters/: AbstractCalculatorParameters.py  AbstractPhotonDiffractorParameters.py  CrystFELPhotonDiffractorParameters.py  DMPhasingParameters.py  DetectorGeometry.py  EMCOrientationParameters.py  EstherPhotonMatterInteractorParameters.py  FEFFPhotonMatterInteractorParameters.py  GAPDPhotonDiffractorParameters.py  GaussWavefrontParameters.py  GromacsPhotonMatterInteractorParameters.py  IonMatterInteractorParameters.py  PhotonBeamParameters.py  PhotonMatterInteractorParameters.py  PlasmaXRTSCalculatorParameters.py  SingFELPhotonDiffractorParameters.py  WavePropagatorParameters.py  XCSITPhotonDetectorParameters.py
Sources/python/SimEx/PhotonExperimentSimulation/: EstherExperiment.py  PhotonExperimentSimulation.py
Sources/python/SimEx/Submitters/: Demo.ipynb  SimExSLURM.py
Sources/python/SimEx/Templates/: main.py
Sources/python/SimEx/Utilities/: DebugTools.py  EntityChecks.py  HydrocodeInputCalculatorParameters.py  HydrocodeInputWriter.py  IOUtilities.py  IntensityCalc.py  Nickel.txt  OpenPMDTools.py  ParallelUtilities.py  PhotonUtilities.py  RadHydroAnalysis.py  RadHydroInputPlots.py  Units.py  Utilities.py  WPGBeamlines.py  WPGUtilities.py  XAS_Calc.py  checkOpenPMD_h5.py  externalLink.py  hxrss.py  hydro_txt_to_opmd.py  my_s2e_beamline.py  propagateSE_BL.py  sample2h5.py  sase1.py  shadow_to_opmd.py  singfelSlurm.py  test.py  wpg2prop.py  wpg_to_opmd.py  xmdyn_to_opmd.py  xpdb.py  xyz2sample.py
Sources/python/extra/: CMakeLists.txt
Sources/unittest/SimExTest/Calculators/: AbstractBaseCalculatorTest.py  XFELPhotonSourceTest.py
Sources/unittest/SimExTest/Utilities/: UtilitiesTests.py
source/: CMakeLists.txt
source/CMake/: FindArmadillo.cmake
source/Framework/: CMakeLists.txt  paths.origin.py
source/Framework/unittest/: Test.py
source/Modules/Analyzers/S2EReconstruction/: CMakeLists.txt  recon.mk
source/Modules/Diffractors/SingFElPhotonDiffractor/: CMakeLists.txt  singfel.mk
source/Modules/Others/s2e/: CMakeLists.txt  s2e_files.mk
source/Modules/Propagators/XFELPhotonPropagator/: CMakeLists.txt
source/Patches/singfel/: CMakeLists.txt  FindArmadillo.cmake.patch
(+594 files in other folders)
