#FIND_PACKAGE (LAPACK REQUIRED)
##message (STATUS "***** LAPACK_LIBRARIES ${LAPACK_LIBRARIES} ****")

if (NOT DEVELOPER_INSTALL)
	install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/python/  DESTINATION ${PYPATH}
		    PATTERN "*.pyc" EXCLUDE
		    PATTERN ".git*" EXCLUDE
		    PATTERN "CMakeLists.txt" EXCLUDE )
endif()


