
cmake_minimum_required (VERSION 2.8.11)
project (SIMEX)


add_subdirectory (Framework)
#FIND_PACKAGE ( CPack )
#FIND_PACKAGE ( CheckLanguage )
#FIND_PACKAGE ( CheckLibraryExists )
#FIND_PACKAGE ( FindBoost )
#FIND_PACKAGE ( FindBZip2 )
#FIND_PACKAGE ( FindBLAS )
#FIND_PACKAGE ( FindArmadillo )
#FIND_PACKAGE ( FindCUDA )
#FIND_PACKAGE ( FindHDF5 )

#FIND_PACKAGE ( FindMPI )
#FIND_PACKAGE ( FindPythonLibs )
#FIND_PACKAGE ( FindWget )


